monitoring/eck/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kibana.home.lab
    external-dns.alpha.kubernetes.io/target: traefik.home.lab
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
  name: kibana
  namespace: monitoring
spec:
  rules:
  - host: kibana.home.lab
    http:
      paths:
      - backend:
          serviceName: kibana-kb-http
          servicePort: 5601
        path: /
